Closed Bug 431890 Opened 17 years ago Closed 16 years ago

nsStandardURL::SetSpec does not fail when host contains leading space " "

Categories

(Core :: Networking, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1b1

People

(Reporter: Gavin, Assigned: mkmelin)

Details

Attachments

(1 file)

See bug 261425 and bug 431774 comment 1: the fixed version of test_bug261425.js doesn't currently pass on the trunk.
Summary: nsStandardURL::SetHost does not fail when host contains leading space " " → nsStandardURL::SetSpec does not fail when host contains leading space " "
Attached patch proposed fixSplinter Review
Assignee: nobody → mkmelin+mozilla
Attachment #337892 - Flags: superreview?(cbiesinger)
Attachment #337892 - Flags: review?(cbiesinger)
Status: NEW → ASSIGNED
Attachment #337892 - Flags: superreview?(cbiesinger)
Attachment #337892 - Flags: superreview+
Attachment #337892 - Flags: review?(cbiesinger)
Attachment #337892 - Flags: review+
changeset: 19242:19030b97ca13 http://hg.mozilla.org/mozilla-central/rev/19030b97ca13 ->FIXED
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1b1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: