Bug 431890: nsStandardURL::SetSpec does not fail when host contains leading space " ". r+sr=cbiesinger